fixed Card (all CardTests work)