@@ -1,6 +1,9 @@
 package ch.epfl.tchu.game;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+import java.util.ArrayList;
 
 /**
  * @author Emma Poggiolini (330757)
@@ -15,7 +18,8 @@ public enum Card {
     public static final int COUNT = ALL.size();
 
     // list of all railcar cards
-    public final static List<Card> CARS = List.of(ALL.remove(COUNT));
+    public final static List<Card> CARS = Collections.singletonList(new ArrayList<Card>(Arrays.asList(Card.values())).remove(COUNT-1));
+    // TODO is this the best way?
 
     // color of card
     // null if locomotive
@@ -26,9 +30,7 @@ public enum Card {
      * @param color
      * @return Card
      */
-    public static Card of(Color color) {
-        return CARS.get(color.ordinal());
-    }
+    public static Card of(Color color) { return ALL.get(color.ordinal()); }
 
     /**
      * color of the card
@@ -43,9 +45,9 @@ public enum Card {
      * initializes attribute color
      */
     private Card() {
-        //gets the index of the corresponding color
+        // gets the index of the corresponding color
         int colorIndex = this.ordinal();
-        //assign the right color or null if it's locomotive
-        this.color = colorIndex == 8 ? null : Color.values()[colorIndex]; //TODO is this readable enough?
+        // assign the right color or null if it's locomotive
+        this.color = colorIndex == 8 ? null : Color.values()[colorIndex]; 
     }
 }
